--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "url": "git@github.com:maxogden/javascript-editor.git"
   },
   "dependencies": {
+    "codemirror": "^4.12.0",
+    "esprima-fb": "^10001.1.0-dev-harmony-fb",
     "extend": "1.1.3",
-    "inherits": "1.0.0",
-    "esprima": "1.0.2",
-    "codemirror": "https://github.com/tmcw/CodeMirror/archive/module-export.tar.gz"
+    "inherits": "1.0.0"
   },
   "devDependencies": {
     "browserify": "2.4.3",
